--- a/style.css
+++ b/style.css
@@ -21,12 +21,20 @@ body{
 
 h1, h2, h3, h4, h5, h6{
   font-family: var(--header-font);
+  font-weight: 600;
   letter-spacing: -1px;
 }
 
 section, p, input, select, textarea, button, a, span, label {
   font-family: var(--body-font);
   font-weight: 300;
+}
+p.logo {
+  font-size: 3rem;
+  font-family: var(--header-font);
+  letter-spacing: -1px;
+  font-weight: 600;
+  margin-block: 0;
 }
 
 pre, code, samp, kbd, var {
@@ -35,7 +43,15 @@ pre, code, samp, kbd, var {
 pre {
   overflow-x: scroll;
 }
-
+header {
+  background-image: linear-gradient(45deg, black, transparent), url(./img/triangle-background.svg);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  color: white;
+  box-sizing:border-box;
+}
 main {
   width: 90%;
   margin: auto;
